import { MigrationInterface, QueryRunner } from "typeorm";

export class KhoiTaoSchema1785468323331 implements MigrationInterface {
    name = 'KhoiTaoSchema1785468323331'

    public async up(queryRunner: QueryRunner): Promise<void> {
        await queryRunner.query(`CREATE TABLE "nguoi_dung" ("id" SERIAL NOT NULL, "ho_ten" character varying NOT NULL, "sdt" character varying, "email" character varying, "mat_khau_hash" character varying NOT NULL, "vai_tro" character varying NOT NULL DEFAULT 'benh_nhan', "trang_thai" boolean NOT NULL DEFAULT true, "ngay_tao" TIMESTAMP NOT NULL DEFAULT now(), CONSTRAINT "UQ_c0035a6bf59e2f2165f47c35f97" UNIQUE ("sdt"), CONSTRAINT "UQ_2e80e311459160919913afd26c9" UNIQUE ("email"), CONSTRAINT "PK_6c787389b1d841339cc2000bb81" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE TABLE "khoa_phong" ("id" SERIAL NOT NULL, "ten_khoa" character varying NOT NULL, "ma" character varying, "mo_ta" text, "vi_tri" character varying, CONSTRAINT "PK_08f45f6c272b2c8876a3ca1c6b2" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE TABLE "bac_si" ("id" SERIAL NOT NULL, "ho_ten" character varying NOT NULL, "hoc_ham" character varying, "chuyen_mon" character varying, "so_nam_kn" integer NOT NULL DEFAULT '0', "danh_gia" double precision NOT NULL DEFAULT '5', "khoa_id" integer, "nguoi_dung_id" integer, CONSTRAINT "PK_560c217c062e9bb46dffc95332f" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE TABLE "dich_vu" ("id" SERIAL NOT NULL, "ten_dich_vu" character varying NOT NULL, "gia" integer NOT NULL DEFAULT '0', "khoa_id" integer, CONSTRAINT "PK_9d4639f86eff2ee293c6fc6912b" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE TABLE "ho_so_benh_nhan" ("id" SERIAL NOT NULL, "ma_benh_nhan" character varying NOT NULL, "ho_ten" character varying NOT NULL, "ngay_sinh" date, "gioi_tinh" character varying, "dia_chi" character varying, "sdt" character varying, "so_bhyt" character varying, "ngay_tai_kham" date, "ghi_chu_tai_kham" text, "nguoi_dung_id" integer, "bac_si_mong_muon_id" integer, "bac_si_tai_kham_id" integer, CONSTRAINT "UQ_fc8da60148166cf83f66e832826" UNIQUE ("ma_benh_nhan"), CONSTRAINT "PK_485549312feb740e234da52dc45" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE TABLE "khung_gio" ("id" SERIAL NOT NULL, "ngay" date NOT NULL, "gio_bat_dau" character varying NOT NULL, "gio_ket_thuc" character varying NOT NULL, "so_luong" integer NOT NULL DEFAULT '5', "da_dat" integer NOT NULL DEFAULT '0', "bac_si_id" integer, CONSTRAINT "PK_1cfdd59dd0abf30fc7a885ab05f" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE TABLE "lich_hen" ("id" SERIAL NOT NULL, "ma_lich_hen" character varying NOT NULL, "trang_thai" character varying NOT NULL DEFAULT 'cho_xac_nhan', "so_thu_tu" integer, "ngay_tao" TIMESTAMP NOT NULL DEFAULT now(), "ho_so_id" integer, "khung_gio_id" integer, "khoa_id" integer, CONSTRAINT "UQ_33cf23fbe11a5b0ff7c8929b17b" UNIQUE ("ma_lich_hen"), CONSTRAINT "PK_8a63e20404f700aec3d5a2ff437" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE TABLE "luot_kham" ("id" SERIAL NOT NULL, "chan_doan" text, "chi_dinh" text, "ghi_chu" text, "trang_thai" character varying NOT NULL DEFAULT 'dang_kham', "thoi_gian" TIMESTAMP NOT NULL DEFAULT now(), "lich_hen_id" integer, "bac_si_id" integer, CONSTRAINT "REL_93a437185f3d02387adfce88f9" UNIQUE ("lich_hen_id"), CONSTRAINT "PK_406d97a60af369d5b203a16a594" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE TABLE "don_thuoc" ("id" SERIAL NOT NULL, "danh_sach_thuoc" text, "lieu_dung" text, "ghi_chu" text, "luot_kham_id" integer, CONSTRAINT "REL_c66320d76b20c60e16ddc26ede" UNIQUE ("luot_kham_id"), CONSTRAINT "PK_6226225aea60e2a81ebb81dfe3f" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE TABLE "tai_lieu_benh_an" ("id" SERIAL NOT NULL, "ten_tep" character varying NOT NULL, "loai_tep" character varying NOT NULL, "kich_thuoc" integer NOT NULL, "du_lieu" bytea NOT NULL, "thoi_gian" TIMESTAMP NOT NULL DEFAULT now(), "lich_hen_id" integer, CONSTRAINT "PK_3da9f0e0a31d81bfe9b5c853a09" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE TABLE "thanh_toan" ("id" SERIAL NOT NULL, "ma_thanh_toan" character varying NOT NULL, "tong_tien" integer NOT NULL DEFAULT '0', "trang_thai" character varying NOT NULL DEFAULT 'cho_thanh_toan', "ghi_chu" text, "ngay_tao" TIMESTAMP NOT NULL DEFAULT now(), "ngay_thanh_toan" TIMESTAMP, "lich_hen_id" integer, "nguoi_tao_id" integer, CONSTRAINT "UQ_94e595bd6db604010484ce6047f" UNIQUE ("ma_thanh_toan"), CONSTRAINT "PK_9afef8ce362261665859c6a618a" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE TABLE "chi_tiet_thanh_toan" ("id" SERIAL NOT NULL, "ten_dich_vu" character varying NOT NULL, "don_gia" integer NOT NULL, "so_luong" integer NOT NULL DEFAULT '1', "thanh_tien" integer NOT NULL, "thanh_toan_id" integer, "dich_vu_id" integer, CONSTRAINT "PK_1b1e83d5b7406eb638f4a490833" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE TABLE "phieu_kham_benh" ("id" SERIAL NOT NULL, "ma_kcb" character varying, "so_benh_an" character varying, "ngay_dk" date, "noi_tru" boolean NOT NULL DEFAULT false, "dtnt" boolean NOT NULL DEFAULT false, "dkrv" boolean NOT NULL DEFAULT false, "ttrv" boolean NOT NULL DEFAULT false, "chuyen_vien" boolean NOT NULL DEFAULT false, "cap_cuu" boolean NOT NULL DEFAULT false, "ten_bn" character varying NOT NULL, "gioi_tinh" character varying, "ngay_sinh" date, "tuoi" character varying, "dan_toc" character varying, "dia_chi" character varying, "nghe_nghiep" character varying, "doi_tuong" character varying, "so_the" character varying, "ky_hieu" character varying, "han_the" date, "ty_le_the" character varying, "dia_chi_the" character varying, "noi_dk_kcb" character varying, "noi_cap" character varying, "ngay_vao" date, "buong" character varying, "giuong" character varying, "kham_lai" boolean NOT NULL DEFAULT false, "nho_kham" boolean NOT NULL DEFAULT false, "hoan_kham" boolean NOT NULL DEFAULT false, "ngay_kham" date, "bs_kham" character varying, "chuyen_khoa" character varying, "cdtt" text, "ghi_chu" text, "trieu_chung" text, "chan_doan_so_bo" text, "ghi_chu_kb" text, "ket_luan" text, "huyet_ap" character varying, "mach" character varying, "nhiet_do" character varying, "nhip_tho" character varying, "chieu_cao" character varying, "can_nang" character varying, "bmi" character varying, "spo2" character varying, "vong_2" character varying, "ten_benh" text, "ma_icd" character varying, "dien_giai" text, "ngay_tao" TIMESTAMP NOT NULL DEFAULT now(), "ho_so_id" integer, "lich_hen_id" integer, "nguoi_tao_id" integer, CONSTRAINT "PK_cbb49fe0c7b566b59528fc1ab60" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE TABLE "y_lenh" ("id" SERIAL NOT NULL, "ma_phieu" character varying NOT NULL, "ngay_yl" date, "bs_dt" character varying, "ngay_cdht" date, "tong_tien" integer NOT NULL DEFAULT '0', "da_nop" integer NOT NULL DEFAULT '0', "tra_lai" integer NOT NULL DEFAULT '0', "trang_thai" character varying NOT NULL DEFAULT 'chua_nop', "ghi_chu" text, "ngay_tao" TIMESTAMP NOT NULL DEFAULT now(), "phieu_kham_id" integer, "nguoi_tao_id" integer, CONSTRAINT "UQ_7b15058b2f22b4cb58166043597" UNIQUE ("ma_phieu"), CONSTRAINT "PK_fccde1a0f00e108b975921b9de3" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE TABLE "lan_thu_tien_y_lenh" ("id" SERIAL NOT NULL, "so_tien" integer NOT NULL, "thoi_gian" TIMESTAMP NOT NULL DEFAULT now(), "y_lenh_id" integer, "nguoi_thu_id" integer, CONSTRAINT "PK_b7f9f9436998ee927feec8f3d9d" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE TABLE "chi_tiet_y_lenh" ("id" SERIAL NOT NULL, "loai" character varying NOT NULL, "ma_vt" character varying, "ten" character varying NOT NULL, "dvt" character varying, "so_luong" double precision NOT NULL DEFAULT '1', "lieu_dung" character varying, "cach_dung" character varying, "don_gia" integer NOT NULL DEFAULT '0', "ty_le" integer NOT NULL DEFAULT '100', "thanh_tien" integer NOT NULL DEFAULT '0', "y_lenh_id" integer, CONSTRAINT "PK_9c3d5182023053d9b9396dbf0e1" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE TABLE "dien_bien_dieu_tri" ("id" SERIAL NOT NULL, "thoi_diem" character varying, "dien_bien" text NOT NULL, "chi_dinh" text, "ngay_tao" TIMESTAMP NOT NULL DEFAULT now(), "phieu_kham_id" integer, "bac_si_id" integer, CONSTRAINT "PK_79955b1f55d7d15e30599f0738a" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE TABLE "sinh_hieu" ("id" SERIAL NOT NULL, "huyet_ap" character varying, "mach" character varying, "nhiet_do" character varying, "nhip_tho" character varying, "spo2" character varying, "chieu_cao" character varying, "can_nang" character varying, "bmi" character varying, "phan_loai" character varying NOT NULL DEFAULT 'binh_thuong', "ghi_chu" text, "thoi_gian" TIMESTAMP NOT NULL DEFAULT now(), "lich_hen_id" integer, "nguoi_do_id" integer, CONSTRAINT "PK_61e90da3e201ae618d69aaf38d0" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE TABLE "kham_lam_sang" ("id" SERIAL NOT NULL, "benh_su" text, "tien_su" text, "di_ung" text, "kham_thuc_the" text, "chan_doan_so_bo" text, "thoi_gian" TIMESTAMP NOT NULL DEFAULT now(), "lich_hen_id" integer, "bac_si_id" integer, CONSTRAINT "PK_5efc5daa2a486cd5cd49fbd08d9" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE TABLE "chi_dinh_cls" ("id" SERIAL NOT NULL, "loai" character varying NOT NULL, "ten_chi_dinh" character varying NOT NULL, "trang_thai" character varying NOT NULL DEFAULT 'cho_thuc_hien', "ket_qua" text, "ket_luan" text, "ngay_tao" TIMESTAMP NOT NULL DEFAULT now(), "ngay_ket_qua" TIMESTAMP, "lich_hen_id" integer, "dich_vu_id" integer, "nguoi_chi_dinh_id" integer, "nguoi_thuc_hien_id" integer, CONSTRAINT "PK_faa9974bed64e380ec6f5a82a1d" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE TABLE "ket_luan_kham" ("id" SERIAL NOT NULL, "chan_doan_chinh" character varying NOT NULL, "ma_icd" character varying, "chan_doan_phu" text, "huong_xu_tri" character varying NOT NULL DEFAULT 'ket_thuc', "don_thuoc" text, "loi_dan" text, "ngay_tai_kham" date, "thoi_gian" TIMESTAMP NOT NULL DEFAULT now(), "lich_hen_id" integer, "bac_si_id" integer, CONSTRAINT "PK_6d3db898f4e673c859cc6efe732" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE TABLE "nhat_ky_hoat_dong" ("id" SERIAL NOT NULL, "hanh_dong" character varying NOT NULL, "noi_dung" text, "thoi_gian" TIMESTAMP NOT NULL DEFAULT now(), "nguoi_dung_id" integer, CONSTRAINT "PK_3bc08082ec24e97728d5fb5d993" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE TABLE "thong_bao" ("id" SERIAL NOT NULL, "loai" character varying NOT NULL, "tieu_de" character varying NOT NULL, "noi_dung" text, "da_doc" boolean NOT NULL DEFAULT false, "thoi_gian" TIMESTAMP NOT NULL DEFAULT now(), "nguoi_nhan_id" integer, "lich_hen_id" integer, CONSTRAINT "PK_0598b77d7c5991cb28f43c14f4e" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE TABLE "bai_truyen_thong" ("id" SERIAL NOT NULL, "tieu_de" character varying NOT NULL, "chuyen_muc" character varying, "tom_tat" text, "noi_dung" text NOT NULL, "the" character varying, "hien_thi" boolean NOT NULL DEFAULT true, "ngay_dang" TIMESTAMP NOT NULL DEFAULT now(), "nguoi_dang_id" integer, CONSTRAINT "PK_bb3a3e6a05314d0a39fba1fa134" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE TABLE "anh_truyen_thong" ("id" SERIAL NOT NULL, "ten_tep" character varying NOT NULL, "loai_tep" character varying NOT NULL, "kich_thuoc" integer NOT NULL, "du_lieu" bytea NOT NULL, "thu_tu" integer NOT NULL DEFAULT '0', "bai_id" integer, CONSTRAINT "PK_66a7f97cab5013503527479dcbe" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE TABLE "tin_tuc" ("id" SERIAL NOT NULL, "tieu_de" character varying NOT NULL, "tag" character varying, "noi_dung" text, "anh" character varying, "ngay_dang" TIMESTAMP NOT NULL DEFAULT now(), CONSTRAINT "PK_0790bce1eebc3228fcb6446d49f" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE TABLE "ho_so_ivf" ("id" SERIAL NOT NULL, "giai_doan" character varying NOT NULL DEFAULT 'kham_hiem_muon', "buoc_kham" text, "buoc_ivf" text, "lam_thang_ivf" boolean NOT NULL DEFAULT false, "ghi_chu" text, "ngay_tao" TIMESTAMP NOT NULL DEFAULT now(), "ngay_cap_nhat" TIMESTAMP NOT NULL DEFAULT now(), "ho_so_id" integer, "bac_si_id" integer, CONSTRAINT "PK_f62e7b4808b98f9f5eba01de7e4" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE TABLE "dang_ky_kham" ("id" SERIAL NOT NULL, "ma_dang_ky" character varying NOT NULL, "ho_ten" character varying NOT NULL, "ngay_sinh" date, "gioi_tinh" character varying, "sdt" character varying NOT NULL, "email" character varying, "dia_chi" text, "benh_nhan_cu" boolean NOT NULL DEFAULT false, "ma_benh_nhan_cu" character varying, "ly_do" text, "ngay_mong_muon" date, "gio_mong_muon" character varying, "trang_thai" character varying NOT NULL DEFAULT 'cho_tiep_don', "ghi_chu_le_tan" text, "ngay_tao" TIMESTAMP NOT NULL DEFAULT now(), "ngay_cap_nhat" TIMESTAMP NOT NULL DEFAULT now(), "khoa_id" integer, "nguoi_xu_ly_id" integer, "ho_so_id" integer, "lich_hen_id" integer, CONSTRAINT "UQ_3e2f451b6e2e2e6723cb5c9a784" UNIQUE ("ma_dang_ky"), CONSTRAINT "PK_3f4f2837ecfd4f9990fe64cf2bc" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE TABLE "phieu_ra_vien" ("id" SERIAL NOT NULL, "tinh_trang" character varying NOT NULL DEFAULT 'hoi_phuc', "ket_luan_suc_khoe" text, "chan_doan_ra_vien" text, "ngay_ra_vien" date, "trang_thai" character varying NOT NULL DEFAULT 'hieu_luc', "ngay_tao" TIMESTAMP NOT NULL DEFAULT now(), "ngay_cap_nhat" TIMESTAMP NOT NULL DEFAULT now(), "ho_so_id" integer, "bac_si_id" integer, CONSTRAINT "PK_8d204d83df79cfd868df2e09325" PRIMARY KEY ("id"))`);
        await queryRunner.query(`ALTER TABLE "bac_si" ADD CONSTRAINT "FK_9f10e952d9fa52f117c1b80290f" FOREIGN KEY ("khoa_id") REFERENCES "khoa_phong"("id") ON DELETE NO ACTION ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "bac_si" ADD CONSTRAINT "FK_8cadda1459308253702ba7d2466" FOREIGN KEY ("nguoi_dung_id") REFERENCES "nguoi_dung"("id") ON DELETE NO ACTION ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "dich_vu" ADD CONSTRAINT "FK_3dee68cb916e06552c57e5b84fe" FOREIGN KEY ("khoa_id") REFERENCES "khoa_phong"("id") ON DELETE NO ACTION ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "ho_so_benh_nhan" ADD CONSTRAINT "FK_a574640d1cb3d24f63831212cbf" FOREIGN KEY ("nguoi_dung_id") REFERENCES "nguoi_dung"("id") ON DELETE NO ACTION ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "ho_so_benh_nhan" ADD CONSTRAINT "FK_3ec907d570acb090ddfa7f78ee4" FOREIGN KEY ("bac_si_mong_muon_id") REFERENCES "bac_si"("id") ON DELETE SET NULL ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "ho_so_benh_nhan" ADD CONSTRAINT "FK_01b2622a767e5f053b5977e4f4b" FOREIGN KEY ("bac_si_tai_kham_id") REFERENCES "bac_si"("id") ON DELETE SET NULL ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "khung_gio" ADD CONSTRAINT "FK_c9398fec8b6297cec55d5eb3c62" FOREIGN KEY ("bac_si_id") REFERENCES "bac_si"("id") ON DELETE NO ACTION ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "lich_hen" ADD CONSTRAINT "FK_80aadaace3863ef2bca856de35b" FOREIGN KEY ("ho_so_id") REFERENCES "ho_so_benh_nhan"("id") ON DELETE NO ACTION ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "lich_hen" ADD CONSTRAINT "FK_ea7d459b2c4cc6b8a0bca6e0230" FOREIGN KEY ("khung_gio_id") REFERENCES "khung_gio"("id") ON DELETE NO ACTION ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "lich_hen" ADD CONSTRAINT "FK_de4374d72086a0c3ccf96e5a920" FOREIGN KEY ("khoa_id") REFERENCES "khoa_phong"("id") ON DELETE NO ACTION ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "luot_kham" ADD CONSTRAINT "FK_93a437185f3d02387adfce88f9b" FOREIGN KEY ("lich_hen_id") REFERENCES "lich_hen"("id") ON DELETE NO ACTION ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "luot_kham" ADD CONSTRAINT "FK_7fc4cc341be5cbcbe56247569cb" FOREIGN KEY ("bac_si_id") REFERENCES "bac_si"("id") ON DELETE NO ACTION ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "don_thuoc" ADD CONSTRAINT "FK_c66320d76b20c60e16ddc26ede2" FOREIGN KEY ("luot_kham_id") REFERENCES "luot_kham"("id") ON DELETE NO ACTION ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "tai_lieu_benh_an" ADD CONSTRAINT "FK_6864de314ed635021515f03eff0" FOREIGN KEY ("lich_hen_id") REFERENCES "lich_hen"("id") ON DELETE CASCADE ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "thanh_toan" ADD CONSTRAINT "FK_8ce6347dd1e37f649a2bd5a6478" FOREIGN KEY ("lich_hen_id") REFERENCES "lich_hen"("id") ON DELETE CASCADE ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "thanh_toan" ADD CONSTRAINT "FK_2c4dc26982495516a4635d80fcf" FOREIGN KEY ("nguoi_tao_id") REFERENCES "nguoi_dung"("id") ON DELETE SET NULL ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "chi_tiet_thanh_toan" ADD CONSTRAINT "FK_23664fefcc35e4140bf71ccc3b2" FOREIGN KEY ("thanh_toan_id") REFERENCES "thanh_toan"("id") ON DELETE CASCADE ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "chi_tiet_thanh_toan" ADD CONSTRAINT "FK_9b79b9354172075c20b0f1f8345" FOREIGN KEY ("dich_vu_id") REFERENCES "dich_vu"("id") ON DELETE SET NULL ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "phieu_kham_benh" ADD CONSTRAINT "FK_381803ef6144fb7654638284c71" FOREIGN KEY ("ho_so_id") REFERENCES "ho_so_benh_nhan"("id") ON DELETE SET NULL ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "phieu_kham_benh" ADD CONSTRAINT "FK_01216cd7a61929ba5edba676e33" FOREIGN KEY ("lich_hen_id") REFERENCES "lich_hen"("id") ON DELETE SET NULL ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "phieu_kham_benh" ADD CONSTRAINT "FK_981f9fbac4412a9e31cfa17b281" FOREIGN KEY ("nguoi_tao_id") REFERENCES "nguoi_dung"("id") ON DELETE SET NULL ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "y_lenh" ADD CONSTRAINT "FK_a6eef427526c29456282748cff7" FOREIGN KEY ("phieu_kham_id") REFERENCES "phieu_kham_benh"("id") ON DELETE SET NULL ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "y_lenh" ADD CONSTRAINT "FK_fa5e2729649ded1ad8292bdcc73" FOREIGN KEY ("nguoi_tao_id") REFERENCES "nguoi_dung"("id") ON DELETE SET NULL ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "lan_thu_tien_y_lenh" ADD CONSTRAINT "FK_9a9714deae9e769a138700d8721" FOREIGN KEY ("y_lenh_id") REFERENCES "y_lenh"("id") ON DELETE CASCADE ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "lan_thu_tien_y_lenh" ADD CONSTRAINT "FK_eaf0e9e654895b290d5a0a9a9bf" FOREIGN KEY ("nguoi_thu_id") REFERENCES "nguoi_dung"("id") ON DELETE SET NULL ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "chi_tiet_y_lenh" ADD CONSTRAINT "FK_db8b60d50e7534319af2912da22" FOREIGN KEY ("y_lenh_id") REFERENCES "y_lenh"("id") ON DELETE CASCADE ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "dien_bien_dieu_tri" ADD CONSTRAINT "FK_5282d4b5c09ec6d43bc5bb8a1cf" FOREIGN KEY ("phieu_kham_id") REFERENCES "phieu_kham_benh"("id") ON DELETE CASCADE ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "dien_bien_dieu_tri" ADD CONSTRAINT "FK_ed9bb9739c8776337efecf6a357" FOREIGN KEY ("bac_si_id") REFERENCES "nguoi_dung"("id") ON DELETE SET NULL ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "sinh_hieu" ADD CONSTRAINT "FK_fcec21dbfd0c6dae542c3328be1" FOREIGN KEY ("lich_hen_id") REFERENCES "lich_hen"("id") ON DELETE CASCADE ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "sinh_hieu" ADD CONSTRAINT "FK_f5d4c45a8407f338ade98e5e0f3" FOREIGN KEY ("nguoi_do_id") REFERENCES "nguoi_dung"("id") ON DELETE SET NULL ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "kham_lam_sang" ADD CONSTRAINT "FK_6e14ecbd8877025a2cf45584de4" FOREIGN KEY ("lich_hen_id") REFERENCES "lich_hen"("id") ON DELETE CASCADE ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "kham_lam_sang" ADD CONSTRAINT "FK_b4ef74aabf4cf392b7a3714aa5a" FOREIGN KEY ("bac_si_id") REFERENCES "nguoi_dung"("id") ON DELETE SET NULL ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "chi_dinh_cls" ADD CONSTRAINT "FK_00eb0959a2496581f95c202f5e4" FOREIGN KEY ("lich_hen_id") REFERENCES "lich_hen"("id") ON DELETE CASCADE ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "chi_dinh_cls" ADD CONSTRAINT "FK_03b00cb1ea0ffe78ba9bccfc772" FOREIGN KEY ("dich_vu_id") REFERENCES "dich_vu"("id") ON DELETE SET NULL ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "chi_dinh_cls" ADD CONSTRAINT "FK_1af336682022d8d55494b132fcf" FOREIGN KEY ("nguoi_chi_dinh_id") REFERENCES "nguoi_dung"("id") ON DELETE SET NULL ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "chi_dinh_cls" ADD CONSTRAINT "FK_5fd494be7c71740a830fe76c031" FOREIGN KEY ("nguoi_thuc_hien_id") REFERENCES "nguoi_dung"("id") ON DELETE SET NULL ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "ket_luan_kham" ADD CONSTRAINT "FK_fa70a58b6747c318870cad5110c" FOREIGN KEY ("lich_hen_id") REFERENCES "lich_hen"("id") ON DELETE CASCADE ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "ket_luan_kham" ADD CONSTRAINT "FK_47de9652d1ac579a033900104a9" FOREIGN KEY ("bac_si_id") REFERENCES "nguoi_dung"("id") ON DELETE SET NULL ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "nhat_ky_hoat_dong" ADD CONSTRAINT "FK_4667b7a8b20cc03d791c309aa1d" FOREIGN KEY ("nguoi_dung_id") REFERENCES "nguoi_dung"("id") ON DELETE SET NULL ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "thong_bao" ADD CONSTRAINT "FK_2a83315905c95135aa39e359f5e" FOREIGN KEY ("nguoi_nhan_id") REFERENCES "nguoi_dung"("id") ON DELETE CASCADE ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "thong_bao" ADD CONSTRAINT "FK_d667da72c595fe361b1cd0680e5" FOREIGN KEY ("lich_hen_id") REFERENCES "lich_hen"("id") ON DELETE SET NULL ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "bai_truyen_thong" ADD CONSTRAINT "FK_dfc36da300c1935ea4eaa8ea739" FOREIGN KEY ("nguoi_dang_id") REFERENCES "nguoi_dung"("id") ON DELETE SET NULL ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "anh_truyen_thong" ADD CONSTRAINT "FK_c978caae029a730fe849ab446c0" FOREIGN KEY ("bai_id") REFERENCES "bai_truyen_thong"("id") ON DELETE CASCADE ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "ho_so_ivf" ADD CONSTRAINT "FK_093bae67c920b4c3c2633de3d3b" FOREIGN KEY ("ho_so_id") REFERENCES "ho_so_benh_nhan"("id") ON DELETE CASCADE ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "ho_so_ivf" ADD CONSTRAINT "FK_570db22a8e7c54db694fa142f1e" FOREIGN KEY ("bac_si_id") REFERENCES "bac_si"("id") ON DELETE SET NULL ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "dang_ky_kham" ADD CONSTRAINT "FK_3968b16509a02383535b9ad78a1" FOREIGN KEY ("khoa_id") REFERENCES "khoa_phong"("id") ON DELETE SET NULL ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "dang_ky_kham" ADD CONSTRAINT "FK_b402636945ca8a49acfa543be17" FOREIGN KEY ("nguoi_xu_ly_id") REFERENCES "nguoi_dung"("id") ON DELETE SET NULL ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "dang_ky_kham" ADD CONSTRAINT "FK_3641435c2d5bdd1ac9aa9ef78e4" FOREIGN KEY ("ho_so_id") REFERENCES "ho_so_benh_nhan"("id") ON DELETE SET NULL ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "dang_ky_kham" ADD CONSTRAINT "FK_5eb3718724ebcb7746103660819" FOREIGN KEY ("lich_hen_id") REFERENCES "lich_hen"("id") ON DELETE SET NULL ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "phieu_ra_vien" ADD CONSTRAINT "FK_1989726921b30be60f102721a0c" FOREIGN KEY ("ho_so_id") REFERENCES "ho_so_benh_nhan"("id") ON DELETE CASCADE ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "phieu_ra_vien" ADD CONSTRAINT "FK_09766ae8760b6e32ff5bd6b83db" FOREIGN KEY ("bac_si_id") REFERENCES "nguoi_dung"("id") ON DELETE SET NULL ON UPDATE NO ACTION`);
    }

    public async down(queryRunner: QueryRunner): Promise<void> {
        await queryRunner.query(`ALTER TABLE "phieu_ra_vien" DROP CONSTRAINT "FK_09766ae8760b6e32ff5bd6b83db"`);
        await queryRunner.query(`ALTER TABLE "phieu_ra_vien" DROP CONSTRAINT "FK_1989726921b30be60f102721a0c"`);
        await queryRunner.query(`ALTER TABLE "dang_ky_kham" DROP CONSTRAINT "FK_5eb3718724ebcb7746103660819"`);
        await queryRunner.query(`ALTER TABLE "dang_ky_kham" DROP CONSTRAINT "FK_3641435c2d5bdd1ac9aa9ef78e4"`);
        await queryRunner.query(`ALTER TABLE "dang_ky_kham" DROP CONSTRAINT "FK_b402636945ca8a49acfa543be17"`);
        await queryRunner.query(`ALTER TABLE "dang_ky_kham" DROP CONSTRAINT "FK_3968b16509a02383535b9ad78a1"`);
        await queryRunner.query(`ALTER TABLE "ho_so_ivf" DROP CONSTRAINT "FK_570db22a8e7c54db694fa142f1e"`);
        await queryRunner.query(`ALTER TABLE "ho_so_ivf" DROP CONSTRAINT "FK_093bae67c920b4c3c2633de3d3b"`);
        await queryRunner.query(`ALTER TABLE "anh_truyen_thong" DROP CONSTRAINT "FK_c978caae029a730fe849ab446c0"`);
        await queryRunner.query(`ALTER TABLE "bai_truyen_thong" DROP CONSTRAINT "FK_dfc36da300c1935ea4eaa8ea739"`);
        await queryRunner.query(`ALTER TABLE "thong_bao" DROP CONSTRAINT "FK_d667da72c595fe361b1cd0680e5"`);
        await queryRunner.query(`ALTER TABLE "thong_bao" DROP CONSTRAINT "FK_2a83315905c95135aa39e359f5e"`);
        await queryRunner.query(`ALTER TABLE "nhat_ky_hoat_dong" DROP CONSTRAINT "FK_4667b7a8b20cc03d791c309aa1d"`);
        await queryRunner.query(`ALTER TABLE "ket_luan_kham" DROP CONSTRAINT "FK_47de9652d1ac579a033900104a9"`);
        await queryRunner.query(`ALTER TABLE "ket_luan_kham" DROP CONSTRAINT "FK_fa70a58b6747c318870cad5110c"`);
        await queryRunner.query(`ALTER TABLE "chi_dinh_cls" DROP CONSTRAINT "FK_5fd494be7c71740a830fe76c031"`);
        await queryRunner.query(`ALTER TABLE "chi_dinh_cls" DROP CONSTRAINT "FK_1af336682022d8d55494b132fcf"`);
        await queryRunner.query(`ALTER TABLE "chi_dinh_cls" DROP CONSTRAINT "FK_03b00cb1ea0ffe78ba9bccfc772"`);
        await queryRunner.query(`ALTER TABLE "chi_dinh_cls" DROP CONSTRAINT "FK_00eb0959a2496581f95c202f5e4"`);
        await queryRunner.query(`ALTER TABLE "kham_lam_sang" DROP CONSTRAINT "FK_b4ef74aabf4cf392b7a3714aa5a"`);
        await queryRunner.query(`ALTER TABLE "kham_lam_sang" DROP CONSTRAINT "FK_6e14ecbd8877025a2cf45584de4"`);
        await queryRunner.query(`ALTER TABLE "sinh_hieu" DROP CONSTRAINT "FK_f5d4c45a8407f338ade98e5e0f3"`);
        await queryRunner.query(`ALTER TABLE "sinh_hieu" DROP CONSTRAINT "FK_fcec21dbfd0c6dae542c3328be1"`);
        await queryRunner.query(`ALTER TABLE "dien_bien_dieu_tri" DROP CONSTRAINT "FK_ed9bb9739c8776337efecf6a357"`);
        await queryRunner.query(`ALTER TABLE "dien_bien_dieu_tri" DROP CONSTRAINT "FK_5282d4b5c09ec6d43bc5bb8a1cf"`);
        await queryRunner.query(`ALTER TABLE "chi_tiet_y_lenh" DROP CONSTRAINT "FK_db8b60d50e7534319af2912da22"`);
        await queryRunner.query(`ALTER TABLE "lan_thu_tien_y_lenh" DROP CONSTRAINT "FK_eaf0e9e654895b290d5a0a9a9bf"`);
        await queryRunner.query(`ALTER TABLE "lan_thu_tien_y_lenh" DROP CONSTRAINT "FK_9a9714deae9e769a138700d8721"`);
        await queryRunner.query(`ALTER TABLE "y_lenh" DROP CONSTRAINT "FK_fa5e2729649ded1ad8292bdcc73"`);
        await queryRunner.query(`ALTER TABLE "y_lenh" DROP CONSTRAINT "FK_a6eef427526c29456282748cff7"`);
        await queryRunner.query(`ALTER TABLE "phieu_kham_benh" DROP CONSTRAINT "FK_981f9fbac4412a9e31cfa17b281"`);
        await queryRunner.query(`ALTER TABLE "phieu_kham_benh" DROP CONSTRAINT "FK_01216cd7a61929ba5edba676e33"`);
        await queryRunner.query(`ALTER TABLE "phieu_kham_benh" DROP CONSTRAINT "FK_381803ef6144fb7654638284c71"`);
        await queryRunner.query(`ALTER TABLE "chi_tiet_thanh_toan" DROP CONSTRAINT "FK_9b79b9354172075c20b0f1f8345"`);
        await queryRunner.query(`ALTER TABLE "chi_tiet_thanh_toan" DROP CONSTRAINT "FK_23664fefcc35e4140bf71ccc3b2"`);
        await queryRunner.query(`ALTER TABLE "thanh_toan" DROP CONSTRAINT "FK_2c4dc26982495516a4635d80fcf"`);
        await queryRunner.query(`ALTER TABLE "thanh_toan" DROP CONSTRAINT "FK_8ce6347dd1e37f649a2bd5a6478"`);
        await queryRunner.query(`ALTER TABLE "tai_lieu_benh_an" DROP CONSTRAINT "FK_6864de314ed635021515f03eff0"`);
        await queryRunner.query(`ALTER TABLE "don_thuoc" DROP CONSTRAINT "FK_c66320d76b20c60e16ddc26ede2"`);
        await queryRunner.query(`ALTER TABLE "luot_kham" DROP CONSTRAINT "FK_7fc4cc341be5cbcbe56247569cb"`);
        await queryRunner.query(`ALTER TABLE "luot_kham" DROP CONSTRAINT "FK_93a437185f3d02387adfce88f9b"`);
        await queryRunner.query(`ALTER TABLE "lich_hen" DROP CONSTRAINT "FK_de4374d72086a0c3ccf96e5a920"`);
        await queryRunner.query(`ALTER TABLE "lich_hen" DROP CONSTRAINT "FK_ea7d459b2c4cc6b8a0bca6e0230"`);
        await queryRunner.query(`ALTER TABLE "lich_hen" DROP CONSTRAINT "FK_80aadaace3863ef2bca856de35b"`);
        await queryRunner.query(`ALTER TABLE "khung_gio" DROP CONSTRAINT "FK_c9398fec8b6297cec55d5eb3c62"`);
        await queryRunner.query(`ALTER TABLE "ho_so_benh_nhan" DROP CONSTRAINT "FK_01b2622a767e5f053b5977e4f4b"`);
        await queryRunner.query(`ALTER TABLE "ho_so_benh_nhan" DROP CONSTRAINT "FK_3ec907d570acb090ddfa7f78ee4"`);
        await queryRunner.query(`ALTER TABLE "ho_so_benh_nhan" DROP CONSTRAINT "FK_a574640d1cb3d24f63831212cbf"`);
        await queryRunner.query(`ALTER TABLE "dich_vu" DROP CONSTRAINT "FK_3dee68cb916e06552c57e5b84fe"`);
        await queryRunner.query(`ALTER TABLE "bac_si" DROP CONSTRAINT "FK_8cadda1459308253702ba7d2466"`);
        await queryRunner.query(`ALTER TABLE "bac_si" DROP CONSTRAINT "FK_9f10e952d9fa52f117c1b80290f"`);
        await queryRunner.query(`DROP TABLE "phieu_ra_vien"`);
        await queryRunner.query(`DROP TABLE "dang_ky_kham"`);
        await queryRunner.query(`DROP TABLE "ho_so_ivf"`);
        await queryRunner.query(`DROP TABLE "tin_tuc"`);
        await queryRunner.query(`DROP TABLE "anh_truyen_thong"`);
        await queryRunner.query(`DROP TABLE "bai_truyen_thong"`);
        await queryRunner.query(`DROP TABLE "thong_bao"`);
        await queryRunner.query(`DROP TABLE "nhat_ky_hoat_dong"`);
        await queryRunner.query(`DROP TABLE "ket_luan_kham"`);
        await queryRunner.query(`DROP TABLE "chi_dinh_cls"`);
        await queryRunner.query(`DROP TABLE "kham_lam_sang"`);
        await queryRunner.query(`DROP TABLE "sinh_hieu"`);
        await queryRunner.query(`DROP TABLE "dien_bien_dieu_tri"`);
        await queryRunner.query(`DROP TABLE "chi_tiet_y_lenh"`);
        await queryRunner.query(`DROP TABLE "lan_thu_tien_y_lenh"`);
        await queryRunner.query(`DROP TABLE "y_lenh"`);
        await queryRunner.query(`DROP TABLE "phieu_kham_benh"`);
        await queryRunner.query(`DROP TABLE "chi_tiet_thanh_toan"`);
        await queryRunner.query(`DROP TABLE "thanh_toan"`);
        await queryRunner.query(`DROP TABLE "tai_lieu_benh_an"`);
        await queryRunner.query(`DROP TABLE "don_thuoc"`);
        await queryRunner.query(`DROP TABLE "luot_kham"`);
        await queryRunner.query(`DROP TABLE "lich_hen"`);
        await queryRunner.query(`DROP TABLE "khung_gio"`);
        await queryRunner.query(`DROP TABLE "ho_so_benh_nhan"`);
        await queryRunner.query(`DROP TABLE "dich_vu"`);
        await queryRunner.query(`DROP TABLE "bac_si"`);
        await queryRunner.query(`DROP TABLE "khoa_phong"`);
        await queryRunner.query(`DROP TABLE "nguoi_dung"`);
    }

}
